bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:2: error: value or is not a member of Boolean
  if (talking==true && hour<7 or talking==true && hour>20) {
                              ^