bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (talking==true && hour<7 or talking==true && hour>20) {
    return true
  } else {
    return false
  }
}